--- a/styles/style.css
+++ b/styles/style.css
@@ -24,6 +24,9 @@
 img{
   width: 100%;
 }
+main{
+  background-image: url('../assets/bg.png');
+}
 header, main{
   max-width: var(--maximum-width);
   margin: 0 auto;
@@ -162,9 +165,9 @@ color: #202020;}
 }
 
 .cards{
-  display: flex;
   max-width: var(--maximum-width);
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
   gap: 30px;
   margin-top: 80px;
   margin-bottom: 80px;
@@ -172,7 +175,6 @@ color: #202020;}
 
 .card{
   display: flex;
-  flex: 1;
   flex-direction: column;
   border-radius: 1.1rem;
   border: 1px solid #DEF5FF;
@@ -229,6 +231,13 @@ color: #202020;}
   border-radius: 50%;
   background-color: #FEA301;
   border: none;
+  transition: all 0.75s 0.1s;
+}
+
+.arrow:hover{
+  background-color: blue;
+  cursor: pointer;
+  transform: scale(1.25);
 }
 
 /* Media Query for Small Device  */
@@ -269,5 +278,12 @@ color: #202020;}
     font-size: 1rem;
   }
 
-  /* Small Device  */
+  /* Standard Curriculumn for Small Device */
+  .cards{
+    grid-template-columns: 1fr;
+    gap: 15px;
+  }
+  .arrows{
+    display: none;
+  }
 }
