--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 :root {
-  --maximum-width:1200px;
+  --maximum-width:1400px;
 }
 .quicksand-font {
   font-family: "Quicksand", serif;
@@ -43,6 +43,8 @@ nav ul li:hover{
 img{
   width: 100%;
   height: 100%;
+  background-position: center;
+  background-size: cover;
 }
 
 .curriculum{
@@ -55,6 +57,10 @@ img{
 header, main{
   max-width: var(--maximum-width);
   margin: 0 auto;
+  padding: 0 10px;
+}
+
+footer{
   padding: 0 10px;
 }
 
@@ -87,8 +93,10 @@ color: #202020;}
   color:#5D58EF;}
 .purple2{
   color: #8700FF;}
+.white{
+  color: white;}
 
-.btn-primary{
+  .btn-primary{
   background-color: black;
   color: white;
   padding: 10px 60px;
@@ -273,7 +281,9 @@ color: #202020;}
   gap: 20px;
   justify-content: center;
   align-items: center;
+  /* border: 1px solid red; */
 }
+
 .story-container{
   height: 600px;
   display: grid;
@@ -285,9 +295,10 @@ color: #202020;}
 }
 .story-container .down-part, .story-container .text{
   background-color: white;
-  border: 1px solid white;
+  /* border: 1px solid white; */
   border-radius: 0 0 1rem 1rem;
 }
+
 .story-container button{
   color: white;
   background-color: #95B226;
@@ -308,6 +319,7 @@ color: #202020;}
 .story1 .text{
   padding-left: 2.25rem;
   padding-bottom: 2rem;
+  padding-right: 1rem;
 }
 .story1 .text button{
   height: 47px;
@@ -347,6 +359,97 @@ color: #202020;}
 
 .story .heading{
   font-weight: 700;
+}
+
+
+/* Footer Section*/
+footer{
+  height: 520px;
+  background-color: #01ACFD;
+  display: flex;
+  align-items: center;
+}
+
+.footer-container{
+  width: var(--maximum-width);
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 50% repeat(2,1fr);
+}
+
+/* .first-part, .second-part, .third-part{
+  border: 1px solid red;
+} */
+
+.first-part-container, .second-part-container, .third-part-container{
+  max-width: 90%;
+  /* border: 1px solid white; */
+}
+
+.first-part .logo-part{
+  display: flex;
+  align-items: center;
+  margin-bottom: 35px;
+  gap: 10px;
+}
+
+.logo-part .logo-pic{
+  /* border: 1px solid red; */
+  width: 70px;
+  height: 85px;
+}
+.logo-part .logo-pic img{
+  /* border: 1px solid green; */
+  position:relative;
+  top: -6px;
+}
+.logo-part .logo-text{
+  font-weight: 700;
+  font-size: 2rem;
+}
+
+.logo-part .description{
+  font-size: 1.25rem;
+}
+
+
+.second-part .about-school{
+  margin-bottom: 20px;
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+.second-part ul{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.second-part .item{
+  list-style: none;
+}
+.second-part .link{
+  text-decoration: none;
+  font-size: 1.25rem;
+  font-weight: 600;
+  color: white;
+}
+
+
+.third-part .keepintouch{
+  font-size: 1.6rem;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+
+.third-part ul{
+  display: flex;
+}
+.third-part li{
+  width: 40px;
+  height: 40px;
+  list-style: none;
+  margin-right: 10px;
+
 }
 
 
@@ -398,7 +501,6 @@ color: #202020;}
   }
 
   /* Our Stories for Small Device */
-
   .left-story{
     display: none;
   }
@@ -415,7 +517,20 @@ color: #202020;}
   }
   
   .right-story .heading, .right-story button{
-    font-size: 0.8rem;
+    font-size: 0.5rem;
   }
 
+
+
+
+  /*Footer for Small Device */
+  footer{
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+  .footer-container{
+    grid-template-columns: 1fr;
+    gap: 10px;
+    justify-content: center;
+  }
 }
